--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@alpinejs/collapse": "3.12.3",
+    "@astrojs/rss": "^4.0.9",
     "@astrojs/tailwind": "4.0.0",
     "@fontsource/inter": "5.0.8",
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,10 +20,12 @@
     "astro": "2.10.13",
     "astro-compress": "2.0.14",
     "astro-icon": "^1.1.1",
+    "markdown-it": "^14.1.0",
     "prettier": "3.0.2",
     "prettier-plugin-astro": "0.12.0",
     "prettier-plugin-tailwindcss": "0.5.3",
     "react-icons": "^5.3.0",
+    "sanitize-html": "^2.13.1",
     "sass": "^1.80.4",
     "swiper": "^11.1.14",
     "tailwindcss": "3.3.3"
